plugins {
    id 'java-library'
    id 'maven-publish'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
    repositories {
      maven {
        name = "GitHubPackages"
        url = "https://maven.pkg.github.com/DarkanRS/core"
        credentials {
          username = System.getenv("GITHUB_ACTOR")
          password = System.getenv("GITHUB_TOKEN")
        }
      }
    }
}

sourceCompatibility = '19'
targetCompatibility = '19'

compileJava {
    options.compilerArgs.addAll(['--release', '19']) 
    options.compilerArgs.addAll(['--enable-preview'])
    options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.concurrent'])
}

application {
    applicationDefaultJvmArgs = ['--enable-preview', 
                                 '--add-modules', 'jdk.incubator.concurrent']
}

repositories {
	mavenLocal()
	mavenCentral()
}

group 'rs.darkan'
version '1.1.14'

dependencies {
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
	implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
	implementation group: 'org.mongodb', name: 'mongodb-driver-sync', version: '4.4.0'
	implementation group: 'org.mongodb', name: 'mongodb-driver-core', version: '4.4.0'
	implementation group: 'io.netty', name: 'netty-all', version: '4.1.77.Final'
	implementation group: 'io.undertow', name: 'undertow-core', version: '2.2.15.Final'
	implementation group: 'io.github.classgraph', name: 'classgraph', version: '4.8.98'
	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.10.0'
}
